fixed bg stretching

--- a/client/src/components/ItemList/style.scss
+++ b/client/src/components/ItemList/style.scss
@@ -3,29 +3,29 @@
 .red-peppers-item {
     background: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
     url('../../assets/images/red-peppers.jpg');
-    background-size: 400px 150px;
+    background-size: cover;
 }
 
 .potatoes-item {
     background: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
     url('../../assets/images/potatoes.jpg');
-    background-size: 400px 150px;
+    background-size: cover;
 }
 
 .carrots-item {
     background: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
     url('../../assets/images/carrots.jpg');
-    background-size: 400px 150px;
+    background-size: cover;
 }
 
 .bok-choy-item {
     background: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
     url('../../assets/images/bok-choy.jpg');
-    background-size: 400px 150px;
+    background-size: cover;
 }
 
 .brocolli-item {
     background: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
     url('../../assets/images/brocolli.jpg');
-    background-size: 400px 250px;
+    background-size: cover;
 }
