--- a/client/src/components/Recommended/style.scss
+++ b/client/src/components/Recommended/style.scss
@@ -19,29 +19,29 @@
 .brocolli {
   background-image: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
   url('../../assets/images/brocolli.jpg');
-  background-size: 300px;
+  background-size: cover;
 }
 
 .bok-choy {
   background-image: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
   url('../../assets/images/bok-choy.jpg');
-  background-size: 250px 100px;
+  background-size: cover;
 }
 
 .carrots {
   background-image: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
   url('../../assets/images/carrots.jpg');
-  background-size: 250px 100px;
+  background-size: cover;
 }
 
 .potatoes {
   background-image: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
   url('../../assets/images/potatoes.jpg');
-  background-size: 250px 120px;
+  background-size: cover;
 }
 
 .red-peppers {
   background-image: linear-gradient(360deg, #2D4133 4.55%, rgba(45, 65, 51, 0) 77.4%),
   url('../../assets/images/red-peppers.jpg');
-  background-size: 250px 120px;
+  background-size: cover;
 }
